--- a/ScrumApplication.Web/Views/Team/ChangeManager.cshtml
+++ b/ScrumApplication.Web/Views/Team/ChangeManager.cshtml
@@ -30,6 +30,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "BackToList")
-</div>
+    <div>
+        <a href="@Url.Action("BackToList", "Team")" class="btn btn-default">Back To List</a>
+    </div>
