--- a/ScrumApplication.Web/Views/Project/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Project/Edit.cshtml
@@ -11,37 +11,38 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Project</h4>
-        
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ProjectId)
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
+<div class="form-horizontal">
+    <h4>Project</h4>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
-                    @Html.ValidationMessageFor(model => model.DayCount, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.ProjectId)
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.DefaultSprintTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
-                    @Html.ValidationMessageFor(model => model.DefaultSprintTime, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
+            @Html.ValidationMessageFor(model => model.DayCount, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
-     
+    <div class="form-group">
+        @Html.LabelFor(model => model.DefaultSprintTime, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
+            @Html.ValidationMessageFor(model => model.DefaultSprintTime, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
+
+    @if (TeamRepository.IsProjectManager(Model.ProjectId))
+    {
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -56,7 +57,9 @@
 
             </div>
         </div>
-    </div>
+
+    }
+</div>
 }
 
     <div>
