--- a/ScrumApplication.Web/Views/Project/Index.cshtml
+++ b/ScrumApplication.Web/Views/Project/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ScrumApplication.Entity.Models;
+@using ScrumApplication.DAL.Repositories;
 @model IEnumerable<Project>
 
 @{
@@ -6,14 +7,10 @@
 }
 
 <h2>Projects</h2>
+    <p>
+        <a href="@Url.Action("Create", "Project", new { teamId = Model.FirstOrDefault().TeamId })" class="btn btn-default">Create Project</a>
+    </p>
 
-@*@if(Model.FirstOrDefault() != null)
-    {
-
-    }*@
-<p>
-    <a href="@Url.Action("Create", "Project", new { teamId = Model.FirstOrDefault().TeamId })" class="btn btn-default">Create Project</a>
-</p>
 
 @if (Model.FirstOrDefault().Name != null)
 {
@@ -37,7 +34,11 @@
 
                     </td>
                     <td>
-                        <a href="@Url.Action("Edit", "Project", new { id = item.ProjectId })" class="btn btn-default">Edit</a>
+                        @if (TeamRepository.IsProjectManager(item.ProjectId))
+                        {
+                            <a href="@Url.Action("Edit", "Project", new { id = item.ProjectId })" class="btn btn-default">Edit</a>
+                            <a href="@Url.Action("Complete", "Project", new { id = item.ProjectId })" class="btn btn-default">Complete</a>
+                        }
                         <a href="@Url.Action("GoSprint", "Project", new { id = item.ProjectId })" class="btn btn-default">Project Home</a>
                         <a href="@Url.Action("AllProjectTasks", "Project", new { id = item.ProjectId })" class="btn btn-default">Epic Tasks</a>
                     </td>
@@ -67,7 +68,10 @@
                         }
                     </td>
                     <td>
-                        <a href="@Url.Action("Green", "Project", new { id = item.ProjectId })" class="btn btn-default">Mark as Uncompleted</a>
+                        @if (TeamRepository.IsProjectManager(item.ProjectId))
+                        {
+                            <a href="@Url.Action("Green", "Project", new { id = item.ProjectId })" class="btn btn-default">Mark as Uncompleted</a>
+                        }
                     </td>
                 </tr>
             }
