--- a/ScrumApplication.Web/Views/Project/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Project/Edit.cshtml
@@ -24,6 +24,13 @@
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -46,14 +53,14 @@
     {
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
                 @if (!Model.IsDone)
                 {
-                    <a href="@Url.Action("Complete", "Project", new { id = Model.ProjectId })" class="btn btn-default">Mark as Completed</a>
+                    <a href="@Url.Action("Complete", "Project", new { id = Model.ProjectId })" class="btn btn-success">Mark as Completed</a>
                 }
                 else
                 {
-                    <a href="@Url.Action("Green", "Project", new { id = Model.ProjectId })" class="btn btn-default">Mark as Uncompleted</a>
+                    <a href="@Url.Action("Green", "Project", new { id = Model.ProjectId })" class="btn btn-success">Mark as Uncompleted</a>
                 }
 
             </div>
@@ -64,5 +71,5 @@
 }
 
     <div>
-        <a href="@Url.Action("BackToList", "Project", new { id = Model.TeamId })" class="btn btn-default">Back To List</a>
+        <a href="@Url.Action("BackToList", "Project", new { id = Model.TeamId })" class="btn btn-primary">Back To List</a>
     </div>
