--- a/ScrumApplication.Web/Views/Team/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Team/Edit.cshtml
@@ -11,15 +11,15 @@
 {
     @Html.AntiForgeryToken()
 <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-6">
         <h4>Team</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.TeamId)
 
-        <div class="form-group">
+        <div class="form-group" style="margin-bottom:30px;">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div>
+            <div class="col-md-10 col-sm-12">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
@@ -29,14 +29,14 @@
             <div class="col-md-offset-2 col-md-10">
                 @if (TeamRepository.IsTeamManager(Model.TeamId))
                 {
-                    <input type="submit" value="Save" class="btn btn-default" />
-                    <a href="@Url.Action("AddUser", "Team", new { id = Model.TeamId })" class="btn btn-default">Add User</a>
-                    <a href="@Url.Action("ChangeManager", "Team", new { id = Model.TeamId })" class="btn btn-default">Change ScrumMaster</a>
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <a href="@Url.Action("AddUser", "Team", new { id = Model.TeamId })" class="btn btn-primary">Add User</a>
+                    <a href="@Url.Action("ChangeManager", "Team", new { id = Model.TeamId })" class="btn btn-primary">Change Manager</a>
                 }
             </div>
         </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-6">
         <h4>Team Members</h4>
         <table class="table">
             <tr>
@@ -45,7 +45,7 @@
             </tr>
             @foreach (var user in Model.Members.ToList())
             {
-                if (user.RoleCode > 2)
+                if (user.RoleCode >= 3)
                 {
                     <tr>
                         <td style="margin-left:10px; margin-top:10px;">
@@ -54,20 +54,24 @@
                         <td style="">
                             @user.Mail
                         </td>
+                        <td>
+                            <a href="@Url.Action("RemoveMemberFromTeam","Team", new { memberId = user.MemberId })" class="btn-sm btn-danger">X</a>
+                        </td>
+                    </tr>
+                }
+                else
+                {
+                    <tr>
+                        <td style="margin-left:10px; margin-top:10px;">
+                            @user.Name (Manager)
+                        </td>
+                        <td style="">
+                            @user.Mail
+                        </td>
                     </tr>
                 }
 
             }
-        </table>
-        <table class="table">
-            <tr>
-                <th>ScrumMaster Name</th>
-                <th>Mail</th>
-            </tr>
-            <tr>
-                <td>@Model.Manager.Name</td>
-                <td>@Model.Manager.Mail</td>
-            </tr>
         </table>
         <div style="margin-top:20px">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -81,5 +85,5 @@
 }
 
 <div>
-    <a href="@Url.Action("BackToList", "Team")" class="btn btn-default">Back To List</a>
+    <a href="@Url.Action("BackToList", "Team")" class="btn btn-primary">Back To List</a>
 </div>
